# pinkreader

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.py  settings.gradle.kts
.github/workflows/: build-android.yml  build-desktop.yml  build.yml  code-quality.yml  nightly.yml  release.yml
android/: AndroidManifest.xml  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  pinkreader_native.cpp
qml/: main.qml
qml/components/: AsyncImage.qml  CommentItem.qml  ErrorBanner.qml  GalleryView.qml  LoadingIndicator.qml  MediaViewer.qml  PostCard.qml  SubredditChip.qml  SubredditSidebar.qml  VideoPlayer.qml  VoteButtons.qml
qml/pages/: AccountsPage.qml  DiscoverPage.qml  FeedPage.qml  LoginPage.qml  PostDetailPage.qml  ProfilePage.qml  SettingsPage.qml  SubmitPage.qml  SubredditPage.qml
resources/: resources.qrc
resources/themes/: blue.qss  dark.qss  light.qss  low_contrast_night.qss  night.qss  ultra_black.qss
src/: main.cpp  pinkreader_app.cpp  pinkreader_app.h
src/accounts/: account.cpp  account.h  account_manager.cpp  account_manager.h  account_store.cpp  account_store.h  account_switcher.cpp  account_switcher.h  oauth_token_store.cpp  oauth_token_store.h  reddit_account.cpp  reddit_account.h  reddit_account_change_listener.h  reddit_account_id.cpp  reddit_account_id.h  reddit_account_manager.cpp  reddit_account_manager.h  reddit_account_manager_v2.cpp  reddit_account_manager_v2.h
src/activities/: album_listing_activity.cpp  album_listing_activity.h  base_activity.cpp  base_activity.h  bug_report_activity.cpp  bug_report_activity.h  changelog_activity.cpp  changelog_activity.h  comment_edit_activity.cpp  comment_edit_activity.h  comment_listing_activity.cpp  comment_listing_activity.h  comment_reply_activity.cpp  comment_reply_activity.h  html_view_activity.cpp  html_view_activity.h  image_view_activity.cpp  image_view_activity.h  imgur_upload_activity.cpp  imgur_upload_activity.h  inbox_listing_activity.cpp  inbox_listing_activity.h  link_dispatch_activity.cpp  link_dispatch_activity.h  main_activity.cpp  main_activity.h  more_comments_listing_activity.cpp  more_comments_listing_activity.h  oauth_login_activity.cpp  oauth_login_activity.h  pm_send_activity.cpp  pm_send_activity.h  post_listing_activity.cpp  post_listing_activity.h  post_submit_activity.cpp  post_submit_activity.h  reddit_terms_activity.cpp  reddit_terms_activity.h  refreshable_activity.cpp  refreshable_activity.h  (+7 more)
src/adapters/: account_list_adapter.cpp  account_list_adapter.h  comment_list_adapter.cpp  comment_list_adapter.h  comment_listing_controller.cpp  comment_listing_controller.h  draft_adapter.cpp  draft_adapter.h  filtered_comment_listing_manager.cpp  filtered_comment_listing_manager.h  grouped_recycler_adapter.cpp  grouped_recycler_adapter.h  grouped_rv_item_frame_layout.cpp  grouped_rv_item_frame_layout.h  grouped_rv_item_loading_spinner.cpp  grouped_rv_item_loading_spinner.h  grouped_rv_item_rr_error.cpp  grouped_rv_item_rr_error.h  grouped_rv_item_view.cpp  grouped_rv_item_view.h  header_recycler_adapter.cpp  header_recycler_adapter.h  image_gallery_adapter.cpp  image_gallery_adapter.h  inbox_adapter.cpp  inbox_adapter.h  listing_controller.cpp  listing_controller.h  main_menu_listing_manager.cpp  main_menu_listing_manager.h  main_menu_selection_listener.h  multireddit_adapter.cpp  multireddit_adapter.h  no_filter_adapter.cpp  no_filter_adapter.h  post_list_adapter.h  post_listing_controller.cpp  post_listing_controller.h  post_listing_manager.cpp  post_listing_manager.h  (+13 more)
src/android/: platform_utils.cpp  platform_utils.hpp
src/cache/: cache_compression.cpp  cache_compression.h  cache_compression_type.h  cache_content_provider.cpp  cache_content_provider.h  cache_db.cpp  cache_db.h  cache_db_manager.cpp  cache_db_manager.h  cache_db_manager_v2.cpp  cache_db_manager_v2.h  cache_download.cpp  cache_download.h  cache_download_thread.cpp  cache_download_thread.h  cache_downloader.cpp  cache_downloader.h  cache_entry.cpp  cache_entry.h  cache_entry_v2.cpp  cache_entry_v2.h  cache_manager.cpp  cache_manager.h  cache_manager_v2.cpp  cache_manager_v2.h  cache_manager_v3.cpp  cache_manager_v3.h  cache_pruner.cpp  cache_pruner.h  cache_reader.cpp  cache_reader.h  cache_request.cpp  cache_request.h  cache_request_callbacks.h  cache_request_json_parser.cpp  cache_request_json_parser.h  cache_request_v2.cpp  cache_request_v2.h  cache_stats.cpp  cache_stats.h  (+25 more)
src/common/: android_common.cpp  android_common.h  better_ssb.cpp  better_ssb.h  cached_hash.cpp  cached_hash.h  cached_thread_pool.cpp  cached_thread_pool.h  cached_value.h  changelog_manager.cpp  changelog_manager.h  config_providers.cpp  config_providers.h  constants.cpp  constants.h  consumer.h  dialog_utils.cpp  dialog_utils.h  display_utils.cpp  display_utils.h  event_listener_set.h  file_utils.cpp  file_utils.h  fonts.cpp  fonts.h  generational_cache.h  generic_factory.h  generic_factory_no_throw.h  global_config.h  global_exception_handler.cpp  global_exception_handler.h  handler_timer.h  has_unique_id.h  hex_utils.cpp  hex_utils.h  list_utils.h  locker.h  media_utils.cpp  media_utils.h  mutable_float_point_2d.h  (+33 more)
src/compose/: album_card.cpp  album_card.h  album_entry_buttons.cpp  album_entry_buttons.h  album_list_item.cpp  album_list_item.h  album_screen.cpp  album_screen.h  compose_base_activity.cpp  compose_base_activity.h  compose_prefs.cpp  compose_prefs.h  compose_theme.cpp  compose_theme.h  net_image.cpp  net_image.h  net_wrapper.cpp  net_wrapper.h  rr_button.cpp  rr_button.h  rr_compose_context.cpp  rr_compose_context.h  rr_dropdown_menu.cpp  (+9 more)
tests/: CMakeLists.txt  test_account_manager.cpp  test_cache.cpp  test_cache_compression.cpp  test_html_parser.cpp  test_image_hosts.cpp  test_json.cpp  test_json_parser.cpp  test_listing_controller.cpp  test_main.cpp  test_markdown.cpp  test_models.cpp  test_oauth.cpp  test_rate_limiter.cpp  test_reddit_api.cpp  test_settings.cpp  test_url_parser.cpp
(+903 files in other folders)
